--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,19 @@
+*.iml
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+
 # Built application files
 *.apk
 *.ap_
 
 # Files for the Dalvik VM
 *.dex
-
-# Java class files
-*.class
 
 # Generated files
 bin/
