--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,4 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+app/client_secret_855525346022-orqsih1i5k466ucf2bhfoicp9odlphqn.apps.googleusercontent.com.json
