--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 app/client_secret_855525346022-orqsih1i5k466ucf2bhfoicp9odlphqn.apps.googleusercontent.com.json
+app/release/output.json
